librenms/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librenms-web
  namespace: librenms
spec:
  replicas: 1
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: librenms-sa
      securityContext:
        fsGroup: 1000
      containers:
        - name: librenms
          image: docker.io/librenms/librenms:26.2.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            capabilities:
              add:
              - "NET_ADMIN"
              - "NET_RAW"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: librenms-data
              mountPath: /data
            - name: rrdcached-db
              mountPath: /data/rrd
      volumes:
      - name: librenms-data
        persistentVolumeClaim:
          claimName: librenms-data
      - name: rrdcached-db
        persistentVolumeClaim:
          claimName: rrdcached-db
