librenms/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms-web
  namespace: librenms
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: librenms-web
