librenms/base/web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: librenms
  namespace: librenms
spec:
  to:
    kind: Service
    name: librenms-web
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
